--- a/styles/layout.css
+++ b/styles/layout.css
@@ -8,7 +8,7 @@ body {
   font-size: 16px;
 }
 nav {
-  background-color: rgba(28, 28, 28, 0.3);
+  background-color: rgba(31, 27, 27, 0.452);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   width: 100%;
   display: -webkit-box;
@@ -22,6 +22,7 @@ nav {
   overflow: auto hidden;
 }
 nav > a {
+  backdrop-filter: blur(10px);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -33,8 +34,7 @@ nav > a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.54) !important;
-  color: rgba(255, 255, 255, 0.54) !important;
+  color: rgb(255, 255, 255) !important;
   height: 64px;
   font-weight: bold;
   font-size: 14px;
@@ -55,7 +55,7 @@ nav > a:hover {
 }
 nav > a:focus,
 nav > a:active {
-  color: rgba(255, 255, 255, 0.87) !important;
+  color: rgba(161, 132, 132, 0.87) !important;
   outline: none;
   background-color: #7d7d7d;
   border-bottom-color: #343434;
