--- a/styles/layout.css
+++ b/styles/layout.css
@@ -176,9 +176,12 @@ h1 {
   margin-bottom: 0;
 }
 h2 {
-  font-weight: normal;
-  font-size: 20px;
+  font-weight:bold;
+  font-size: 30px;
   margin-top: 0;
+  text-shadow: 1px 1px 1px rgba(31, 27, 27, 0.452);
+  padding: 0.5%;
+  color: #343434;
 }
 h1 + h2 {
   font-style: italic;
