--- a/styles/layout.css
+++ b/styles/layout.css
@@ -8,7 +8,7 @@ body {
   font-size: 16px;
 }
 nav {
-  background-color: rgba(31, 27, 27, 0.452);
+  background-color: #1c1c1c;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   width: 100%;
   display: -webkit-box;
@@ -22,7 +22,6 @@ nav {
   overflow: auto hidden;
 }
 nav > a {
-  backdrop-filter: blur(10px);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -34,7 +33,8 @@ nav > a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  color: rgb(255, 255, 255) !important;
+  background-color:#1c1c1c;
+  color: rgba(255, 255, 255, 0.54) !important;
   height: 64px;
   font-weight: bold;
   font-size: 14px;
@@ -42,6 +42,7 @@ nav > a {
   box-sizing: border-box;
   position: relative;
   padding-top: 4px;
+  border-bottom: #343434 solid 4px;
   -webkit-transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1), border-bottom-color 0.4s cubic-bezier(0.4, 0, 0.2, 1);
           transition: color 0.2s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.4s cubic-bezier(0.4, 0, 0.2, 1), border-bottom-color 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -51,22 +52,22 @@ nav > a {
   }
 }
 nav > a:hover {
-  color: #ffffff !important;
+  color: #ffe002 !important;
 }
 nav > a:focus,
 nav > a:active {
-  color: rgba(161, 132, 132, 0.87) !important;
+  color: rgba(255, 255, 255, 0.87) !important;
   outline: none;
-  background-color: #7d7d7d;
+  background-color: #1c1c1c;
   border-bottom-color: #343434;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: 1000;
 }
 nav > a:before {
   content: '';
   display: block;
   position: absolute;
-  background-color:#ffffff;
+  background-color:#ffe002;
   width: 100%;
   left: 0;
   top: -4px;
